--- a/css/styles.css
+++ b/css/styles.css
@@ -137,12 +137,14 @@ header {
 .explore-section {
     display: inline-flex;
     position: absolute;
-    top: 50%;
-    left: 5%;
+    top: 150px;
+    left: 100px;
     transform: translateY(-50%);
     width: 60%;
     padding: 20px;
     color: white;
+    margin-top:5%;
+    overflow: auto;
 }
 
 .explore-myleft, .explore-myright {
