--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-.homepage {
+.prettybackground {
     background: transparent; /* Ensures no background */
     background-image: url('../img/homePageBackground.jpg');
     background-size: cover;
@@ -212,10 +212,27 @@ main {
 
 .explore-myright {
     visibility: hidden;
-    width: 840px;  /* 50% */
+    width: 835px;  /* 50% */
     height: 1000px;
     border: 5px solid black;
     overflow-y: auto;
+}
+
+.stockimage {
+    width: 800px;
+    height: 600px;
+}
+
+.city-name {
+    text-align: left;
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+.city-description {
+    text-align: left;
+    font-weight: normal;
+    font-size: 1.0em;
 }
 
 .explore-section h1 {
@@ -379,15 +396,29 @@ footer {
 }
 
 /* Contact Section */
+/*
 .contact-section {
     position: absolute;
     top: 50%;
     left: 5%;
     transform: translateY(-50%);
-    width: 90%; /* Adjust width if needed */
-    display: flex;
+    width: 90%; */ /* Adjust width if needed */
+/*    display: flex;
     padding: 20px;
     color: white;
+}
+*/
+
+.contact-section {
+    position: fixed;
+    top: 10px;
+    left: 40px;
+    display: inline-flex;
+    width: 90%;
+    padding: 20px;
+    color: white;
+    margin-top:5%;
+    height: 1000px;
 }
 
 .contact-section .left,
