--- a/css/styles.css
+++ b/css/styles.css
@@ -219,15 +219,15 @@ main {
 
 .explore-myright {
     visibility: hidden;
-    width: 835px;  /* 50% */
-    height: 1000px;
+    width: 435px;  /* 50% */
+    height: 500px;
     border: 5px solid black;
     overflow-y: auto;
 }
 
 .stockimage {
-    width: 800px;
-    height: 600px;
+    width: 400px;
+    height: 300px;
 }
 
 .city-name {
@@ -461,11 +461,25 @@ footer {
 }
 
 /* Optional: Styling for form inside the right section */
-.contact-section .right .entry input[type="text"],
-.contact-section .right .entry input[type="email"],
+.contact-section .right .entry input[type="text"] {
+    padding: 12px;
+    width: 300px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.contact-section .right .entry input[type="email"] {
+    padding: 12px;
+    width: 300px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
 .contact-section .right .entry textarea {
     padding: 12px;
-    width: 100%;
+    width: 400px;
     font-size: 16px;
     border-radius: 5px;
     border: 1px solid #ccc;
