--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,11 @@
     width: 100vw;  /* Optional: ensures it spans the full width of its container */
   }
 
+  .spacer2 {
+    height: 15px;
+    width: 95%;  /* Optional: ensures it spans the full width of its container */
+  }
+
   .buttonNavBar {
     margin-right: 5px;
   }
@@ -234,6 +239,12 @@ main {
     text-align: left;
     font-weight: bold;
     font-size: 1.2em;
+}
+
+.time {
+    text-align: left;
+    font-weight: normal;
+    font-size: 1.0em;
 }
 
 .city-description {
