--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,9 @@ main {
 .explore-myright {
     visibility: hidden;
     width: 435px;  /* 50% */
-    height: 500px;
+    height: 50px;
+    max-height: 500px;
+    /* height: 500px; */
     border: 5px solid black;
     overflow-y: auto;
 }
